--- a/asr_lab1.ipynb
+++ b/asr_lab1.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "In these labs we will work with HMMs in the form of Weighted Finite State Transducers.  Examples were given at the start of Lecture 5, but if you need a refresh, read this [introduction](https://github.com/ZhaoZeyu1995/asr_labs/blob/master/introduction.pdf).  We will use the Python interface to the [OpenFst toolkit](http://openfst.org).\n",
+    "In these labs we will work with HMMs in the form of Weighted Finite State Transducers.    We will use the Python interface to the [OpenFst toolkit](http://openfst.org). Examples were given at the start of Lecture 5, but if you need a refresh, read this [introduction](https://github.com/ZhaoZeyu1995/asr_labs/blob/master/introduction.pdf).\n",
+    "\n",
+    "Although most of the lab instructions are self-contained, this year we have started to create our [own documentation](https://openfst-python-documentation.readthedocs.io/en/latest/index.html) to the Python interface to OpenFst, following feedback that the [official documentation](https://openfst-python-documentation.readthedocs.io/en/latest/index.html) is incomplete and hard to follow.  We intend the documentation to be useful as reference material, and will add to it as labs progress.\n",
+    "\n",
+    "See [README.md](https://github.com/ZhaoZeyu1995/asr_labs/blob/master/README.md) for setup instructions.\n",
     "\n",
     "# Getting started\n",
     "\n",
@@ -26,7 +30,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we create tables for our symbols"
+    "OpenFst internally stores FST labels in integer format. This means we need a _symbol table_ to map from the text form of the labels to their integer IDs.  We create now tables for our symbols.\n",
+    "\n",
+    "A **SymbolTable()** is simply a table associating symbols and indexes. We add symbols to the table with the method **add_symbol()**"
    ]
   },
   {
@@ -46,15 +52,18 @@
     }
    ],
    "source": [
+    "# Create two symbol tables: one for the input labels, one for the output labels\n",
     "input_sym = fst.SymbolTable()\n",
     "output_sym = fst.SymbolTable()\n",
     "\n",
+    "# input symbols\n",
     "input_sym.add_symbol('<eps>') # by convention, <eps> always\n",
     "                              # has symbol zero\n",
-    "input_sym.add_symbol('a')  # input symbols\n",
+    "input_sym.add_symbol('a')     \n",
     "input_sym.add_symbol('b')\n",
     "\n",
-    "output_sym.add_symbol('<eps>')  # output symbols\n",
+    "# output symbols\n",
+    "output_sym.add_symbol('<eps>') \n",
     "output_sym.add_symbol('d')\n",
     "output_sym.add_symbol('c')"
    ]
@@ -63,8 +72,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A **SymbolTable()** is simply a table associating symbols and indexes. We add symbols to the table with the method **add_symbol()**\n",
-    "\n",
     "Now that we've got our symbol tables, we will build the FST itself:"
    ]
   },
@@ -96,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our FST transduces the input to the outputs, so we set the symbol tables as such. Now, we want to add a number of states:"
+    "Now, let's add some states:"
    ]
   },
   {
@@ -115,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The output of the **add_state()** method is just the index assigned to the state, but it can be useful to assign that index to a variable to give it a more meaningful label.\n",
+    "The output of the **add_state()** method is just the index assigned to the state.  It's not necessary to stroe this, but in this example, we assign each state index to a variable name so that it can be easily used later.\n",
     "\n",
     "To create arcs between states, we do:"
    ]
@@ -138,11 +145,13 @@
     }
    ],
    "source": [
+    "# Get IDs for labels 'a', 'b', 'c', 'd' in integer form\n",
     "a = input_sym.find('a')\n",
     "b = input_sym.find('b')\n",
     "c = output_sym.find('c')\n",
     "d = output_sym.find('d')\n",
     "\n",
+    "# Add arcs\n",
     "f.add_arc(s0, fst.Arc(a, c, None, s1))\n",
     "f.add_arc(s0, fst.Arc(b, d, None, s2))\n",
     "f.add_arc(s1, fst.Arc(a, c, None, s3))\n",
@@ -161,9 +170,9 @@
     "\n",
     "**Arc(*input symbol index*, *output symbol index*, *weight*, *destination state*)**\n",
     "\n",
-    "We use the **find()** method of the symbol tables to get the index of a certain label.\n",
+    "We use the **find()** method of the symbol tables to get the index of a label in the state table.\n",
     "\n",
-    "Now we just add start and end states:"
+    "To finish constructing the FST we just add start and end states:"
    ]
   },
   {
@@ -259,14 +268,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And voila, our first FST, shown in the example above, is done!"
+    "And our first FST, shown in the example above, is done!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises"
+    "# Exercises\n",
+    "\n",
+    "In this lab you will build some simple FSTs.  Some of these will be related to words or phones, as described in lectures.  For these examples, we'll use a short _lexicon_ (a dictionary of pronunciations).  We load this from the provided text file with this helper function:"
    ]
   },
   {
@@ -287,7 +298,7 @@
     "        lex (dict): dictionary mapping words to list of phones\n",
     "    \"\"\"\n",
     "    \n",
-    "    lex = {}  # create a dictionary for the lexicon entries (this could be a problem with larger lexica)\n",
+    "    lex = {}  # create a dictionary for the lexicon entries\n",
     "    with open(lex_file, 'r') as f:\n",
     "        for line in f:\n",
     "            line = line.split()  # split at each space\n",
@@ -330,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Write a function that generates symbol tables from a lexicon, using the provided phonetic dictionary in **lexicon.txt** and the helper function *parse_lexicon* in cells above. Use p_1, p_2, ..., eh_1, ... to denote the phone states. "
+    "1. Complete the following function that generates symbol tables from a lexicon, using the provided phonetic dictionary in **lexicon.txt** and the helper function *parse_lexicon* in cells above. Use p_1, p_2, ..., eh_1, ... to denote the phone state labels. "
    ]
   },
   {
@@ -529,15 +540,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Create functions generating WFSTs representing the following HMMs:\n",
+    "2. Create functions generating WFSTs representing the following HMMs (illustrated in Lecture 4, slide 11)\n",
     "\n",
     "    1. A 3-state left-to-right phone HMM with self-loops\n",
-    "    2. A parallel-path left-to-right HMM, shown below\n",
-    "    3. An ergodic HMM with $n$ states (you will need to think about how to handle final states)\n",
+    "    2. A 5-state parallel-path left-to-right HMM\n",
+    "    3. An ergodic HMM with $n$ states (you will need to think about how to handle initial and final states)\n",
     "    \n",
-    "Don't worry about the arc labels for the second two WFSTs.   \n",
-    "\n",
-    "![A parallel path left-to-right HMM](figs/parallel_path_hmm.png)"
+    "Don't worry about the arc labels for the second two WFSTs.   \n"
    ]
   },
   {
@@ -554,7 +563,7 @@
     "        f (fst.Fst()): an FST object, assumed to exist already\n",
     "        start_state (int): the index of the first state, assumed to exist already\n",
     "        phone (str): the phone label \n",
-    "        n (int): number of states of the HMM excluding start and end\n",
+    "        n (int): number of emitting states of the HMM\n",
     "        \n",
     "    Returns:\n",
     "        the final state of the FST\n",
@@ -576,7 +585,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here are the codes for you to debug\n",
+    "# Here is the code to help you debug your solutions\n",
     "f = fst.Fst()\n",
     "start = f.add_state()\n",
     "f.set_start(start)\n",
@@ -609,7 +618,7 @@
     "    Args:\n",
     "        f (fst.Fst()): an FST object, assumed to exist already\n",
     "        start_state (int): the index of the first state, assumed to exist already\n",
-    "        n (int): number of states of the HMM excluding start and end\n",
+    "        n (int): number of emitting states of the HMM\n",
     "        \n",
     "    Returns:\n",
     "        the final state of the FST\n",
@@ -630,7 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here are the codes for you to debug\n",
+    "# Here is the code to help you debug your solutions\n",
     "f = fst.Fst()\n",
     "start = f.add_state()\n",
     "f.set_start(start)\n",
@@ -660,7 +669,7 @@
     "    Args:\n",
     "        f (fst.Fst()): an FST object, assumed to exist already\n",
     "        start_state (int): the index of the first state, assumed to exist already\n",
-    "        n (int): number of states of the HMM excluding start and end\n",
+    "        n (int): number of emitting states of the HMM\n",
     "        \n",
     "    Returns:\n",
     "        the final state of the FST\n",
@@ -681,12 +690,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here are the codes for you to debug\n",
+    "# Here is the code to help you debug your solutions\n",
     "f = fst.Fst()\n",
     "start = f.add_state()\n",
     "f.set_start(start)\n",
     "\n",
-    "last_state = generate_parallel_path_wfst(f, start, 4)\n",
+    "last_state = generate_ergodic_wfst(f, start, 5)\n",
     "f"
    ]
   },
@@ -739,7 +748,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here are the codes for you to debug\n",
+    "# Here is the code to help you debug your solutions\n",
     "f = fst.Fst()\n",
     "start = f.add_state()\n",
     "f.set_start(start)\n",
@@ -749,6 +758,7 @@
     "f.set_output_symbols(phone_table)\n",
     "\n",
     "# We need special code to display the higher-resolution WFSTs inside Jupyter notebook\n",
+    "# (you don't need to look at this)\n",
     "from subprocess import check_call\n",
     "from IPython.display import Image\n",
     "f.draw('tmp.dot', portrait=True)\n",
@@ -818,7 +828,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here are the codes for you to debug\n",
+    "# Here is the code to help you debug your solutions\n",
     "f = generate_phone_recognition_wfst(3)\n",
     "f.set_input_symbols(state_table)\n",
     "f.set_output_symbols(phone_table)\n",
@@ -864,7 +874,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here are the codes for you to debug\n",
+    "# Here is the code to help you debug your solutions\n",
     "f = generate_phone_sequence_recognition_wfst(3)\n",
     "f.set_input_symbols(state_table)\n",
     "f.set_output_symbols(phone_table)\n",
@@ -890,7 +900,7 @@
    "outputs": [],
    "source": [
     "def generate_word_sequence_recognition_wfst(n):\n",
-    "    \"\"\" generate a HMM to recognise any single word sequence for words in the lexicon\n",
+    "    \"\"\" generate a HMM to recognise any sequence of words in the lexicon\n",
     "    \n",
     "    Args:\n",
     "        n (int): states per phone HMM\n",
@@ -962,7 +972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
