A small bug fixed in asr_lab1.ipynb.

--- a/asr_lab1.ipynb
+++ b/asr_lab1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In these labs we will work with HMMs in the form of Weighted Finite State Transducers.    We will use the Python interface to the [OpenFst toolkit](http://openfst.org). Examples were given at the start of Lecture 5, but if you need a refresh, read this [introduction](https://github.com/ZhaoZeyu1995/asr_labs/blob/master/introduction.pdf).\n",
     "\n",
-    "Although most of the lab instructions are self-contained, this year we have started to create our [own documentation](https://openfst-python-documentation.readthedocs.io/en/latest/index.html) to the Python interface to OpenFst, following feedback that the [official documentation](https://openfst-python-documentation.readthedocs.io/en/latest/index.html) is incomplete and hard to follow.  We intend the documentation to be useful as reference material, and will add to it as labs progress.\n",
+    "Although most of the lab instructions are self-contained, this year we have started to create our [own documentation](https://openfst-python-documentation.readthedocs.io/en/latest/index.html) to the Python interface to OpenFst, following feedback that the [official documentation](https://www.openfst.org/twiki/bin/view/FST/PythonExtension) is incomplete and hard to follow.  We intend the documentation to be useful as reference material, and will add to it as labs progress.\n",
     "\n",
     "See [README.md](https://github.com/ZhaoZeyu1995/asr_labs/blob/master/README.md) for setup instructions.\n",
     "\n",
