--- a/asr_lab5_solutions.ipynb
+++ b/asr_lab5_solutions.ipynb
@@ -701,7 +701,7 @@
     "                break  # no need to keep going through other arcs, as it's determinized\n",
     "        if not found:\n",
     "            print(\"Can't transduce the sequence with provided FST\")\n",
-    "                \n",
+    "            return\n",
     "    final_weight = float(f.final(curr_state))\n",
     "    if final_weight != math.inf: # if this is a final state\n",
     "        out_seq = [f.output_symbols().find(w) for w in output if w != eps]  # find the labels in the table, remove epsilons\n",
